<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SmovBookM</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search">Search</string>
    <string name="info">Information</string>

    <string name="load_error">请求数据错误</string>

    <string name="retry">重载</string>

    <string name="home_tap_to_load_content">重载</string>

    <string name="cd_navigate_up">Navigate up</string>

    <string name="published_in">Published in: \n%1$s</string>
    <string name="article_functionality_not_available">Functionality not available \uD83D\uDE48</string>
    <string name="close">CLOSE</string>
    <string name="article_share_post">Share post</string>

    <string name="scan_server_qrcode">扫描服务端二维码</string>

    <string name="current">00:00</string>
    <string name="clarity">清晰度</string>

    <string name="content_description">图片</string>

    <string name="next_set">3秒后播放下一集</string>
    <string name="replay_text">再次观看</string>
    <string name="player_notNetWork_content">网络无连接，请检查网络后重试</string>
    <string name="player_notNetWork_retry">重试</string>
    <string name="player_next_timer_date">%1$d秒后播放下一集</string>
    <string name="video_time_start">00:00</string>
    <string name="speed">倍速</string>
    <string name="other">其他</string>
    <string name="clarity4000">4K</string>
    <string name="clarity1080">1080P</string>
    <string name="clarity720">720P</string>
    <string name="speed_0_5">0.5X</string>
    <string name="speed_0_75">0.75X</string>
    <string name="speed_1_0">1.0X</string>
    <string name="speed_2_0">2.0X</string>
    <string name="speed_4_0">4.0X</string>
    <string name="other_nothing">现在这里什么都没有哦</string>
    <string name="server_select">服务器选择</string>
    <string name="test_string">测试</string>

    <string name="no_url">播放地址无效</string>

    <string name="total_time"> / %1$s</string>
    <string name="diff_time">&#160;[%1$s]</string>


</resources>