<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

    <RelativeLayout
            android:id="@+id/surface_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

    </RelativeLayout>


    <androidx.media3.ui.SubtitleView
            android:id="@+id/sub_title_view"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="30dp" />

    <RelativeLayout
            android:id="@+id/thumb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:background="#000000"
            android:scaleType="fitCenter" />

    <LinearLayout
            android:id="@+id/layout_bottom"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:gravity="top"
            android:visibility="invisible">


        <LinearLayout
                android:id="@+id/layout_bottom_seek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:background="#00000000"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="visible">

            <TextView
                    android:id="@+id/current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/video_time_start"
                    android:textColor="#ffffff" />

            <SeekBar
                    android:id="@+id/progress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:max="100"
                    android:maxHeight="4dp"
                    android:minHeight="4dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:progressDrawable="@drawable/video_seek_progress"
                    android:thumb="@drawable/ic_seekbar_thumb" />

            <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/video_time_start"
                    android:textColor="#ffffff" />

            <ImageView
                    android:id="@+id/fullscreen"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:scaleType="center"
                    android:src="@drawable/ic_add_to_booksheelf"
                    app:tint="#FFFFFF" />


        </LinearLayout>

        <LinearLayout
                android:id="@+id/layout_bottom_function"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp"
                android:background="#00000000"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">


            <LinearLayout
                    android:id="@+id/speed"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:descendantFocusability="blocksDescendants"
                    android:visibility="visible"
                    android:layout_weight="1">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="0dp"
                        android:paddingEnd="5dp"
                        app:srcCompat="@drawable/ic_outline_browse_gallery_24"
                        android:contentDescription="@string/speed" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/speed"
                        android:textColor="#ffffff" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/clarity"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:descendantFocusability="blocksDescendants"
                    android:visibility="visible"
                    android:layout_weight="1">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="0dp"
                        android:paddingEnd="5dp"
                        app:srcCompat="@drawable/ic_baseline_calendar_view_day_24"
                        android:contentDescription="@string/clarity" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clarity"
                        android:textColor="#ffffff" />

            </LinearLayout>

            <LinearLayout
                    android:id="@+id/other"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:descendantFocusability="blocksDescendants"
                    android:visibility="visible"
                    android:layout_weight="1">

                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="0dp"
                        android:paddingEnd="5dp"
                        app:srcCompat="@drawable/ic_outline_pending_24"
                        android:contentDescription="@string/other" />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/other"
                        android:textColor="#ffffff" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


    <ProgressBar
            android:id="@+id/bottom_progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="1.5dp"
            android:layout_alignParentBottom="true"
            android:max="100"
            android:progressDrawable="@drawable/video_progress_smovbook" />

    <ImageView
            android:id="@+id/back_tiny"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginTop="6dp"
            android:visibility="gone" />

    <LinearLayout
            android:id="@+id/layout_top"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:paddingStart="30dp"
            android:paddingEnd="20dp"
            android:background="@drawable/video_title_bg_smovbook"
            android:gravity="center_vertical">

        <ImageView
                android:id="@+id/back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_round_arrow_back_ios_24" />

        <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loading"
            android:visibility="invisible"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading3" />

    <ImageView
            android:id="@+id/start"
            android:visibility="gone"
            android:layout_width="57dp"
            android:layout_height="57dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_play" />

    <!--    这个并不适合做这个按钮 感觉很别扭-->
    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_start"
            android:visibility="invisible"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            app:lottie_autoPlay="false"
            app:lottie_rawRes="@raw/play_pause" />

    <ImageView
            android:id="@+id/small_close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/video_small_close"
            android:visibility="gone" />

    <ImageView
            android:id="@+id/lock_screen"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="50dp"
            android:scaleType="centerInside"
            android:src="@drawable/ic_unlock"
            android:visibility="gone" />

    <LinearLayout
            android:id="@+id/dialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:visibility="gone"
            android:gravity="bottom|center_horizontal">

        <LinearLayout
                android:id="@+id/clarity_dialog"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_dialog"
                android:layout_marginBottom="20dp"
                android:visibility="gone"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawablePadding="16dp"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/clarity4000"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawablePadding="16dp"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/clarity1080"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawablePadding="16dp"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/clarity720"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/speed_dialog"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_dialog"
                android:layout_marginBottom="20dp"
                android:visibility="gone"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawablePadding="16dp"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/speed_0_5"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawablePadding="16dp"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/speed_0_75"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawablePadding="16dp"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/speed_1_0"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawablePadding="16dp"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/speed_2_0"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawablePadding="16dp"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/speed_4_0"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
                android:id="@+id/other_dialog"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/shape_dialog"
                android:visibility="gone"
                android:orientation="vertical">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawablePadding="16dp"
                    android:gravity="center_vertical"
                    android:padding="16dp"
                    android:text="@string/other_nothing"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />


        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
